tests/success/00-basics/List-SumTuple.vix
type list a = Nil | Cons a (ptr (list a))
type tuple a b = Tuple a b

myList = Ptr (Cons (Tuple 1 2) (Ptr (Cons (Tuple 3 4) (Ptr (Cons (Tuple 5 6) (Ptr Nil))))))

map f (Ptr Nil) = Ptr Nil
map f (Ptr (Cons x xs)) = Ptr (Cons (f x) (map f xs))

test = map (\(Tuple a b). Tuple (printInt a) (printInt b)) myList
